2001-07-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-oracle-connection.c (gda_oracle_connection_open): parse
	the connection string, using a GdaQuarkList object